--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -1,6 +1,6 @@
 # Monitoring Stack
 
-version: '1'
+version: '3.3'
 services:
   prometheus:
     restart: always
@@ -8,7 +8,7 @@ services:
     ports:
       - 9090:9090
     networks:
-      - internal-net
+      - monitoring-net
       - external-net
     volumes:
       - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
@@ -18,7 +18,7 @@ services:
     restart: always
     image: quay.io/prometheus/alertmanager:v0.25.0
     networks:
-      - internal-net
+      - monitoring-net
       - external-net
     ports:
       - 9093:9093
@@ -31,7 +31,7 @@ services:
     environment:
       - DISCORD_WEBHOOK=
     networks:
-      - internal-net
+      - monitoring-net
       - external-net
     ports:
       - 9094:9094
@@ -47,13 +47,27 @@ services:
     ports:
       - 9100:9100
     networks:
-    - internal-net
+    - monitoring-net
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /:/rootfs:ro
 
+  grafana:
+    restart: always
+    image: grafana/grafana:10.0.1
+    environment:
+      - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-polystat-panel
+    user: "1000"
+    networks:
+      - monitoring-net
+      - external-net
+    ports:
+    - 3000:3000
+    volumes:
+    - './grafana:/var/lib/grafana'
+
 networks:
   external-net:
-  internal-net:
+  monitoring-net:
     internal: true
