monitoring: update docker-compose

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -65,7 +65,7 @@ services:
     ports:
     - 3000:3000
     volumes:
-    - './grafana:/var/lib/grafana'
+    - '/data/monitoring/grafana:/var/lib/grafana'
 
 networks:
   external-net:
