--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   reverse-proxy:
     restart: always
     image: nginx:alpine
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     networks:
       - internal-net
       - monitoring_monitoring-net
@@ -20,6 +21,7 @@ services:
   certbot:
     restart: always
     image: certbot/certbot:latest
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     volumes:
       - /data/reverse-proxy/certbot/conf:/etc/letsencrypt
       - /data/reverse-proxy/certbot/www:/var/www/certbot
