--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -16,12 +16,12 @@ server {
     server_name fediland-1;
     
     include             /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_certificate     /etc/letsencrypt/live/social.glorious-space.eu/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/social.glorious-space.eu/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/fediland.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/fediland.org/privkey.pem;
     ssl_dhparam         /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
         proxy_set_header Host $http_host;
         proxy_pass http://grafana:3000;
     }
-}
+}   
