Reverse: Update configuration

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -1,9 +1,8 @@
 server {
     listen 80;
-    server_name fediland-1;  
-
+    server_name fediland.org;
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://www.fediland.org$request_uri;
     }
 
     location /.well-known/acme-challenge/ {
@@ -13,8 +12,23 @@ server {
 
 server {
     listen 443 ssl;
-    server_name fediland-1;
-    
+    server_name www.fediland.org;
+    error_page    500 502 503 504  /50x.html;
+
+    include             /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_certificate     /etc/letsencrypt/live/fediland.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/fediland.org/privkey.pem;
+    ssl_dhparam         /etc/letsencrypt/ssl-dhparams.pem;
+
+    location      / {
+        root    /var/www/fediland-website/;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name monitoring.fediland.org;
+
     include             /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_certificate     /etc/letsencrypt/live/fediland.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/fediland.org/privkey.pem;
@@ -24,4 +38,4 @@ server {
         proxy_set_header Host $http_host;
         proxy_pass http://grafana:3000;
     }
-}   
+}
