--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
     - /data/reverse-proxy/certbot/conf:/etc/letsencrypt
     - /data/reverse-proxy/certbot/www:/var/www/certbot
+    - /data/fediland-website:/var/www/fediland-website
 
   certbot:
     restart: always
