--- a/monitoring/config/prometheus/prometheus.yml
+++ b/monitoring/config/prometheus/prometheus.yml
@@ -26,3 +26,5 @@ scrape_configs:
     static_configs:
       - targets:
           - "node-exporter:9100"
+      - labels:
+        machine_name: fedispace-1
