--- a/monitoring/config/prometheus/prometheus.yml
+++ b/monitoring/config/prometheus/prometheus.yml
@@ -24,7 +24,6 @@ scrape_configs:
     scrape_interval: 15s
     metrics_path: /metrics
     static_configs:
-      - targets:
-          - "node-exporter:9100"
-      - labels:
+      - targets: ["node-exporter:9100"]
+        labels:
           machine_name: fedispace-1
