--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - 9090:9090
     networks:
       - internal-net
+    extra_hosts:
+      - host.docker.internal:host-gateway
     volumes:
       - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./config/prometheus/alert.rules.yml:/etc/prometheus/alert.rules.yml
@@ -55,12 +57,6 @@ services:
     image: grafana/grafana:10.0.1
     environment:
       GF_INSTALL_PLUGINS: grafana-clock-panel,grafana-polystat-panel
-      GF_DATABASE_TYPE: postgres
-      GF_DATABASE_HOST: postgresql
-      GF_DATABASE_NAME: 
-      GF_DATABASE_USER: 
-      GF_DATABASE_PASSWORD: 
-      GF_DATABASE_SSL_MODE: disable
     user: "${GF_UID}"
     networks:
       - databases_internal-net
@@ -70,6 +66,7 @@ services:
     - 127.0.0.1:3000:3000
     volumes:
     - '/data/monitoring/grafana:/var/lib/grafana'
+    - ./config/grafana/grafana.ini:/etc/grafana/grafana.ini
 
 networks:
   external-net:
