--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -46,11 +46,20 @@ services:
     ports:
       - 9100:9100
     networks:
-    - internal-net
+      - internal-net
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
       - /:/rootfs:ro
+
+  postgres-exporter:
+     image: prometheuscommunity/postgres-exporter
+     ports:
+       - 9187:9187
+     networks:
+       - internal-net
+     environment:
+       DATA_SOURCE_NAME: ${DATA_SOURCE_NAME}
 
   grafana:
     restart: always
