--- a/monitoring/config/prometheus/prometheus.yml
+++ b/monitoring/config/prometheus/prometheus.yml
@@ -37,3 +37,7 @@ scrape_configs:
   - job_name: postgres-exporter
     static_configs:
       - targets: ["postgres-exporter:9187"]
+
+  - job_name: 'yace-exporter'
+    static_configs:
+      - targets: ['yace-exporter:5000']
