--- a/databases/docker-compose.yml
+++ b/databases/docker-compose.yml
@@ -16,13 +16,16 @@ services:
         - POSTGRES_USER=
         - POSTGRES_PASSWORD=
 
-    # redis:
-    #   restart: always
-    #   image:
-    #   ports:
-    #     - 
-    #   networks:
-    #     - databases-net
+    redis:
+      restart: always
+      image: redis:latest
+      ports:
+        - 127.0.0.1:6379:6379
+      networks:
+        - internal-net
+        - external-net
+      volumes:
+        - '/data/databases/redis/redis.conf:/etc/redis/redis.conf'
 
 networks:
   external-net:
