--- a/databases/docker-compose.yml
+++ b/databases/docker-compose.yml
@@ -19,13 +19,15 @@ services:
     redis:
       restart: always
       image: redis:latest
+      command: redis-server /usr/local/etc/redis/redis.conf
       ports:
         - 127.0.0.1:6379:6379
       networks:
         - internal-net
         - external-net
       volumes:
-        - '/data/databases/redis/redis.conf:/etc/redis/redis.conf'
+        - './config/redis/redis.conf:/usr/local/etc/redis/redis.conf'
+        - '/data/databases/redis/data/:/data'
 
 networks:
   external-net:
